--- a/servicios.html
+++ b/servicios.html
@@ -21,18 +21,18 @@
     <section class="container py-5">
         <h2 class="text-center mb-4">Nuestros Servicios</h2>
 
-        <!-- Tarjetas Bootstrap (Requisito #11.3) -->
+        <!-- tarjetas ( #11.3) -->
         <div class="row g-4">
             <div class="col-md-4">
                 <div class="card h-100 shadow service-card">
                     <div class="card-body">
                         <h5 class="card-title">Masaje Relajante <span data-bs-toggle="tooltip"
                                 title="Reduce el estrés y mejora la circulación.">🛈</span></h5>
-                        <!-- Tooltip (#11.5) -->
+                        <!-- tooltip (#11.5) -->
                         <p class="card-text">Relájate con un masaje completo de cuerpo en un ambiente aromático y suave.
                         </p>
                         <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalOferta1">Ver
-                            Oferta</button> <!-- Modal (#11.2) -->
+                            Oferta</button> <!-- modal (#11.2) -->
                     </div>
                 </div>
             </div>
@@ -51,7 +51,7 @@
         </div>
     </section>
 
-    <!-- Acordeón (Requisito #11.1) -->
+    <!-- acordeón ( #11.1) -->
     <section class="container py-4">
         <h3 class="mb-3">Detalles de Servicios</h3>
         <div class="accordion" id="accordionServicios">
@@ -84,7 +84,7 @@
         </div>
     </section>
 
-    <!-- Modal Bootstrap (Requisito #11.2) -->
+    <!-- modal (#11.2) -->
     <div class="modal fade" id="modalOferta1" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -113,14 +113,7 @@
         </div>
     </div>
 
-    <!-- Hover estilo tabla de precios (#12) con CSS -->
-    <style>
-        .service-card:hover {
-            background-color: #ffe4ec;
-            transform: scale(1.02);
-            transition: all 0.3s ease;
-        }
-    </style>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
