--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <!--listado del menu-->
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#inicio">Inicio</a>
+                            <a class="nav-link" href="index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="servicios.html">Servicios</a>
@@ -90,111 +90,111 @@
     </header>
 
 
-    <body>
 
-        <section class="bannerparallax">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 text-center wow animate__animated animate__slideInLeft animate__delay-300ms">
-                        <h1 class="text-white titulo">Bienvenido a Salud & Belleza</h1>
-                        <p class="container text-white pt-5">
-                            un espacio donde el bienestar integral es nuestra prioridad. Sumergite en un mundo de
-                            armonía y cuidado personal con servicios y productos diseñados para resaltar lo mejor de
-                            vos. ¡Comenzá hoy tu camino hacia una vida más saludable, equilibrada y radiante!</p>
-                    </div>
+
+    <section class="bannerparallax">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center wow animate__animated animate__slideInLeft animate__delay-300ms">
+                    <h1 class="text-white titulo">Bienvenido a Salud & Belleza</h1>
+                    <p class="container text-white pt-5">
+                        un espacio donde el bienestar integral es nuestra prioridad. Sumergite en un mundo de
+                        armonía y cuidado personal con servicios y productos diseñados para resaltar lo mejor de
+                        vos. ¡Comenzá hoy tu camino hacia una vida más saludable, equilibrada y radiante!</p>
                 </div>
             </div>
-        </section>
-
-
-
-        <!-- misión y visión -->
-        <section class="introduccion py-5">
-            <div class="container">
-                <div class="row text-center">
-                    <div class="col-md-6 wow fadeInLeft">
-                        <h2>Misión</h2>
-                        <p>Brindar servicios y productos que potencien el bienestar físico, mental y emocional de
-                            nuestros clientes.</p>
-                    </div>
-                    <div class="col-md-6 wow fadeInRight">
-                        <h2>Visión</h2>
-                        <p>Ser líderes en el sector de salud y belleza, destacando por innovación, calidad y compromiso
-                            con nuestros clientes.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-
-
-        <!-- Carousel fotográfico -->
-        <section class="carousel-fotos py-5 ">
-            <div class="container">
-                <div id="carouselSalud" class="carousel slide wow fadeInUp" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="img/img1.jpg" class="d-block w-100" alt="masaje">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="img/img2.jpg" class="d-block w-100" alt="amenidades">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="img/img3.jpg" class="d-block w-100" alt="facial">
-                        </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselSalud"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon"></span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselSalud"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon"></span>
-                    </button>
-                </div>
-            </div>
-        </section>
-
-        <div class="clip-footer">
-            <footer class="footer-custom text-center">
-                <!-- Texto superpuesto -->
-                <div class="footer-texto">
-                    <h6 class="fw-bold">Derechos Reservados 2025</h6>
-                    <h6 class="pt-2 fw-bold">Nicole Masco</h6>
-                </div>
-
-                <!-- SVG decorativo -->
-                <div class="footer-svg">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-                        <path fill="#fff6ec" fill-opacity="1"
-                            d="M0,160L60,186.7C120,213,240,267,360,277.3C480,288,600,256,720,213.3C840,171,960,117,1080,106.7C1200,96,1320,128,1380,144L1440,160L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
-                        </path>
-                    </svg>
-                </div>
-            </footer>
         </div>
-
-    </body>
-
+    </section>
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <!-- misión y visión -->
+    <section class="introduccion py-5">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-6 wow fadeInLeft">
+                    <h2>Misión</h2>
+                    <p>Brindar servicios y productos que potencien el bienestar físico, mental y emocional de
+                        nuestros clientes.</p>
+                </div>
+                <div class="col-md-6 wow fadeInRight">
+                    <h2>Visión</h2>
+                    <p>Ser líderes en el sector de salud y belleza, destacando por innovación, calidad y compromiso
+                        con nuestros clientes.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
-    <script src="js/wow.min.js"></script>
-    <script>
-        new WOW().init();
-    </script>
 
-    <script>
-        window.addEventListener('scroll', function () {
-            const header = document.querySelector('header');
-            header.classList.toggle('activo', window.scrollY > 50);
-        });
-    </script>
+
+    <!-- Carousel fotográfico -->
+    <section class="carousel-fotos py-5 ">
+        <div class="container">
+            <div id="carouselSalud" class="carousel slide wow fadeInUp" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="img/img1.jpg" class="d-block w-100" alt="masaje">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/img2.jpg" class="d-block w-100" alt="amenidades">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/img3.jpg" class="d-block w-100" alt="facial">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselSalud"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselSalud"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </button>
+            </div>
+        </div>
+    </section>
+
+    <div class="clip-footer">
+        <footer class="footer-custom text-center">
+            <!-- Texto superpuesto -->
+            <div class="footer-texto">
+                <h6 class="fw-bold">Derechos Reservados 2025</h6>
+                <h6 class="pt-2 fw-bold">Nicole Masco</h6>
+            </div>
+
+            <!-- SVG decorativo -->
+            <div class="footer-svg">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                    <path fill="#fff6ec" fill-opacity="1"
+                        d="M0,160L60,186.7C120,213,240,267,360,277.3C480,288,600,256,720,213.3C840,171,960,117,1080,106.7C1200,96,1320,128,1380,144L1440,160L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
+                    </path>
+                </svg>
+            </div>
+        </footer>
+    </div>
 
 </body>
+
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+
+<script src="js/wow.min.js"></script>
+<script>
+    new WOW().init();
+</script>
+
+<script>
+    window.addEventListener('scroll', function () {
+        const header = document.querySelector('header');
+        header.classList.toggle('activo', window.scrollY > 50);
+    });
+</script>
+
+
 
 </html>
