--- a/servicios.html
+++ b/servicios.html
@@ -7,19 +7,92 @@
     <title>Servicios | Salud y Belleza</title>
     <link rel="icon" href="img/favicon.jpeg"> <!--ICONO-->
 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet"> <!-- carga de la libreria ANIMATE.CSS CDN -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
+    <!-- carga de la libreria ANIMATE.CSS CDN -->
 
     <script src="https://kit.fontawesome.com/fa2ce6a4c8.js" crossorigin="anonymous"></script> <!--hamburguesa-->
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <link rel="stylesheet" href="estilos.css">
-    <link rel="stylesheet" href="reglas.css">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/reglas.css">
 </head>
 
-<body>
+<body id="inicio">
+    <header class="fixed-top">
+        <!-- SVG Clip-path -->
+        <div class="clip-header">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <path fill="#fff6ec" fill-opacity="1"
+                    d="M0,192L80,208C160,224,320,256,480,240C640,224,800,160,960,154.7C1120,149,1280,203,1360,229.3L1440,256L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z">
+                </path>
+            </svg>
+        </div>
 
-    <section class="container py-5">
-        <h2 class="text-center mb-4">Nuestros Servicios</h2>
+        <!-- Navbar -->
+
+        <nav class="navbar navbar-expand-lg navigation-wrap">
+            <div class="container">
+                <!-- Logo -->
+                <a class="navbar-brand" href="index.html">
+                    <img src="img/logo2.png" alt="Logotipo de la empresa" class="img-fluid" />
+                </a>
+
+
+                <!--menu hamburguesa-->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <!--icono 3 lineas horizontales-->
+                    <i class="fas fa-bars"></i>
+                </button>
+
+                <!--estructura del menu (contenido)-->
+                <div class="collapse navbar-collapse" id="menu">
+
+                    <!--listado del menu-->
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="productos.html">Productos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="maquillaje.html">Maquillaje</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="nutricion.html">Nutrición</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="bienestar.html">Bienestar</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="sobre-nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="ubicacion.html">Ubicación</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contactanos.html">Contáctanos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="galeria.html">Galería</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+
+
+    <section class="servicios container py-5">
+        <h1 class="text-center mb-4">Nuestros Servicios</h1>
 
         <!-- tarjetas ( #11.3) -->
         <div class="row g-4">
@@ -48,78 +121,155 @@
                     </div>
                 </div>
             </div>
+
+            <div class="col-md-4">
+                <div class="card h-100 shadow service-card">
+                    <div class="card-body">
+                        <h5 class="card-title">Hidratación Profunda <span data-bs-toggle="tooltip"
+                                title="Limpieza profunda y vitaminas para tu piel.">🛈</span></h5>
+                        <p class="card-text">Ideal para darle una nueva imagen y rejuvenecer tu rostro.</p>
+                        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalOferta3">Ver
+                            Oferta</button>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </section>
 
     <!-- acordeón ( #11.1) -->
-    <section class="container py-4">
-        <h3 class="mb-3">Detalles de Servicios</h3>
-        <div class="accordion" id="accordionServicios">
+    <section id="accordion" class="container my-4">
+
+        <div class="accordion" id="accordionExample">
             <div class="accordion-item">
-                <h2 class="accordion-header" id="headingOne">
+                <h2 class="accordion-header">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseOne">
-                        ¿Qué incluye el masaje relajante?
-                    </button>
+                        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                         ¿Qué incluye el masaje relajante? </button>
                 </h2>
-                <div id="collapseOne" class="accordion-collapse collapse show">
+                <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         Aceites esenciales, música ambiental, y masaje de 60 minutos.
                     </div>
                 </div>
             </div>
+
             <div class="accordion-item">
-                <h2 class="accordion-header" id="headingTwo">
+                <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseTwo">
+                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                         ¿Cuánto dura un facial nutritivo?
                     </button>
                 </h2>
-                <div id="collapseTwo" class="accordion-collapse collapse">
+                <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         El servicio dura aproximadamente 45 minutos.
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
 
-    <!-- modal (#11.2) -->
-    <div class="modal fade" id="modalOferta1" tabindex="-1">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Oferta Masaje</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                </div>
-                <div class="modal-body">
-                    ¡Reserva hoy y obtén un 20% de descuento!
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        ¿Qué pasa si me hago hidratación profunda cada mes?
+                    </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        Tu piel se mantiene suave, luminosa y protegida del envejecimiento prematuro. Es ideal para mantener un rostro saludable todo el año.                    </div>
                 </div>
             </div>
-        </div>
-    </div>
 
-    <div class="modal fade" id="modalOferta2" tabindex="-1">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Oferta Facial</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                </div>
-                <div class="modal-body">
-                    Facial + limpieza profunda por solo ₡15.000
+
+
+
+            <!-- modal (#11.2) -->
+            <div class="modal fade" id="modalOferta1" tabindex="-1">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Oferta Masaje</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                        </div>
+                        <div class="modal-body">
+                            ¡Reserva hoy y obtén un 20% de descuento!
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
 
+            <div class="modal fade" id="modalOferta2" tabindex="-1">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Oferta Facial</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                        </div>
+                        <div class="modal-body">
+                            Facial + limpieza profunda por solo ₡15.000
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+            <div class="modal fade" id="modalOferta3" tabindex="-1">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Oferta Facial</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                        </div>
+                        <div class="modal-body">
+                            Facial + Hidratación profunda por solo ₡20.000
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        const tooltips = document.querySelectorAll('[data-bs-toggle="tooltip"]');
-        tooltips.forEach(t => new bootstrap.Tooltip(t));
-    </script>
+            
+            </section>
+
+            <div class="clip-footer">
+                <footer class="footer-custom text-center">
+                    <!-- Texto superpuesto -->
+                    <div class="footer-texto">
+                        <h6 class="fw-bold">Derechos Reservados 2025</h6>
+                        <h6 class="pt-2 fw-bold">Nicole Masco</h6>
+                    </div>
+
+                    <!-- SVG decorativo -->
+                    <div class="footer-svg">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                            <path fill="#fff6ec" fill-opacity="1"
+                                d="M0,160L60,186.7C120,213,240,267,360,277.3C480,288,600,256,720,213.3C840,171,960,117,1080,106.7C1200,96,1320,128,1380,144L1440,160L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
+                            </path>
+                        </svg>
+                    </div>
+                </footer>
+            </div>
+
 </body>
+
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+
+<script src="js/wow.min.js"></script>
+<script>
+    new WOW().init();
+</script>
+
+<script>
+    window.addEventListener('scroll', function () {
+        const header = document.querySelector('header');
+        header.classList.toggle('activo', window.scrollY > 50);
+    });
+</script>
+
+
 
 </html>
