--- a/bienestar.html
+++ b/bienestar.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nutrición | Salud y Belleza</title>
+    <title>Bienestar | Salud y Belleza</title>
     <link rel="icon" href="img/favicon.jpeg"> <!--ICONO-->
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
@@ -95,16 +95,58 @@
             <div class="row justify-content-center">
                 <div
                     class="maquillaje col-md-10 text-center wow animate__animated animate__slideInLeft animate__delay-300ms">
-                    <h2 class="mb-4">Nutrición para una Vida Saludable</h2>
+                    <h2 class="mb-4">Activa tu Bienestar: Rutinas para Cuerpo y Mente</h2>
                     <p class="lead">
-                        Descubre cómo una alimentación balanceada puede transformar tu bienestar. Te presentamos
-                        consejos prácticos, comparativas útiles en una tabla interactiva y recetas nutritivas que puedes
-                        aplicar fácilmente en tu rutina diaria.
+                        Descubre una selección de rutinas de ejercicio diseñadas para mejorar tu salud física y mental
+                        desde casa. Ya sea que busques tonificar tu cuerpo, aumentar tu energía o simplemente liberar el
+                        estrés, aquí encontrarás opciones accesibles y efectivas para cada nivel. ¡Empieza hoy a
+                        sentirte mejor por dentro y por fuera!
                     </p>
                 </div>
             </div>
         </section>
+        
+        <!--video YT-->
+        <section>
+            <div class="row justify-content-center">
+                <div class="maquillaje col-md-10 text-center">
+                    <h2 class="mb-4">Video sobre el bienestar</h2>
 
+                    <div class="row justify-content-center">
+                        <div class="col-md-6 col-lg-5 order-md-1 d-flex justify-content-center">
+                            <div class="ratio ratio-16x9">
+                                <iframe width="560" height="315"
+                                    src="https://www.youtube.com/embed/Sj-aV8PLwcA?si=aPTLThog4dzaBbZm"
+                                    title="YouTube video player" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- cuadro de lista -->
+        <section class="container py-5 wow animate__animated animate__slideInRight animate__delay-300ms">
+            <h2 class="text-center mb-4">Pequeños Hábitos, Grandes Cambios</h2>
+
+            <div class="row justify-content-center">
+                <div class="col-md-8 col-lg-6">
+                    <div class="list-group">
+                        <li class="list-group-item bg-secondary text-center text-white fw-bold">TIPS</li>
+                        <li class="list-group-item lista">Respira profundamente al despertar, 3 minutos de respiración
+                            consciente</li>
+                        <li class="list-group-item lista">Mantén tu hidratación: mínimo 8 vasos de agua al día</li>
+                        <li class="list-group-item lista">Tómate pausas activas durante el trabajo para evitar tensiones
+                        </li>
+                        <li class="list-group-item lista">Jabón natural exfoliante de café</li>
+                        <li class="list-group-item lista">Desconéctate 1 hora antes de dormir: sin pantallas, sin ruido
+                        </li>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
         <div class="clip-footer">
