--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
                 <div class="col-md-6 wow fadeInLeft">
                     <h2>Misión</h2>
                     <p>Brindar servicios y productos que potencien el bienestar físico, mental y emocional de
-                        nuestros clientes.</p>
+                        nuestros clientes</p>
                 </div>
                 <div class="col-md-6 wow fadeInRight">
                     <h2>Visión</h2>
                     <p>Ser líderes en el sector de salud y belleza, destacando por innovación, calidad y compromiso
-                        con nuestros clientes.</p>
+                        con nuestros clientes</p>
                 </div>
             </div>
         </div>
