--- a/maquillaje.html
+++ b/maquillaje.html
@@ -91,7 +91,7 @@
 
     <body>
         <!-- descripcion -->
-        <section class="servicios container py-5">
+        <section class="servicios container py-5 wow animate__animated animate__slideInLeft animate__delay-300ms">
             <div class="row justify-content-center">
               <div class="maquillaje col-md-10 text-center">
                 <h2 class="mb-4">Estilos de Maquillaje</h2>
@@ -104,7 +104,7 @@
           
           <!--video YT-->
           <section >
-            <div class="row justify-content-center">
+            <div class="row justify-content-center wow animate__animated animate__slideInRight animate__delay-300ms">
               <div class="maquillaje col-md-10 text-center">
             <h2 class="mb-4">Video de tipos de maquillaje</h2>
 
