--- a/servicios.html
+++ b/servicios.html
@@ -91,7 +91,7 @@
 
 
 
-    <section class="servicios container py-5">
+    <section class="servicios container py-5 wow animate__animated animate__slideInLeft animate__delay-300ms">
         <h1 class="text-center mb-4">Nuestros Servicios</h1>
 
         <!-- tarjetas ( #11.3) -->
@@ -102,7 +102,7 @@
                         <h5 class="card-title">Masaje Relajante <span data-bs-toggle="tooltip"
                                 title="Reduce el estrés y mejora la circulación.">🛈</span></h5>
                         <!-- tooltip (#11.5) -->
-                        <p class="card-text">Relájate con un masaje completo de cuerpo en un ambiente aromático y suave.
+                        <p class="card-text">Relájate con un masaje completo de cuerpo en un ambiente aromático y suave
                         </p>
                         <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modalOferta1">Ver
                             Oferta</button> <!-- modal (#11.2) -->
@@ -114,8 +114,8 @@
                 <div class="card h-100 shadow service-card">
                     <div class="card-body">
                         <h5 class="card-title">Facial Nutritivo <span data-bs-toggle="tooltip"
-                                title="Limpieza profunda y vitaminas para tu piel.">🛈</span></h5>
-                        <p class="card-text">Ideal para hidratar, nutrir y rejuvenecer tu rostro.</p>
+                                title="Limpieza profunda y vitaminas para tu piel">🛈</span></h5>
+                        <p class="card-text">Ideal para hidratar, nutrir y rejuvenecer tu rostro</p>
                         <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modalOferta2">Ver
                             Oferta</button>
                     </div>
@@ -126,8 +126,8 @@
                 <div class="card h-100 shadow service-card">
                     <div class="card-body">
                         <h5 class="card-title">Hidratación Profunda <span data-bs-toggle="tooltip"
-                                title="Limpieza profunda y vitaminas para tu piel.">🛈</span></h5>
-                        <p class="card-text">Ideal para darle una nueva imagen y rejuvenecer tu rostro.</p>
+                                title="Limpieza profunda y vitaminas para tu piel">🛈</span></h5>
+                        <p class="card-text">Ideal para darle una nueva imagen y rejuvenecer tu rostro</p>
                         <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modalOferta3">Ver
                             Oferta</button>
                     </div>
@@ -151,7 +151,7 @@
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        Aceites esenciales, música ambiental, y masaje de 60 minutos.
+                        Aceites esenciales, música ambiental, y masaje de 60 minutos
                     </div>
                 </div>
             </div>
@@ -165,7 +165,7 @@
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        El servicio dura aproximadamente 45 minutos.
+                        El servicio dura aproximadamente 45 minutos
                     </div>
                 </div>
             </div>
@@ -179,7 +179,7 @@
                 </h2>
                 <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        Tu piel se mantiene suave, luminosa y protegida del envejecimiento prematuro. Es ideal para mantener un rostro saludable todo el año.                    </div>
+                        Tu piel se mantiene suave, luminosa y protegida del envejecimiento prematuro. Es ideal para mantener un rostro saludable todo el año </div>
                 </div>
             </div>
 
