--- a/productos.html
+++ b/productos.html
@@ -91,13 +91,13 @@
 
     <body>
         <!-- CUADROS DE LISTA -->
-        <section class="servicios container py-5">
+        <section class="servicios container py-5 wow animate__animated animate__slideInLeft animate__delay-300ms">
             <h1 class="text-center mb-4">Nuestros Productos</h1>
 
             <div class="row justify-content-center">
                 <div class="col-md-8 col-lg-6">
                     <div class="list-group">
-                        <li class="list-group-item bg-secondary text-white fw-bold">PRODUCTOS DESTACADOS</li>
+                        <li class="list-group-item bg-secondary text-center text-white fw-bold">PRODUCTOS DESTACADOS</li>
                         <li class="list-group-item lista">Sérum facial con ácido hialurónico</li>
                         <li class="list-group-item lista">Aceite esencial de lavanda (relajante)</li>
                         <li class="list-group-item lista">Crema corporal hidratante con karité</li>
@@ -108,7 +108,7 @@
             </div>
         </section>
 
-        <section class="container pt-5">
+        <section class="container pt-5 wow animate__animated animate__slideInRight animate__delay-300ms">
             <div class="row justify-content-center text-center">
                 <h1 class="text-center mb-4">Fotos de los productos </h1>
 
