--- a/galeria.html
+++ b/galeria.html
@@ -89,7 +89,6 @@
         </nav>
     </header>
 
-    <body>
         <!-- descripcion -->
         <section class="servicios container py-5 wow animate__animated animate__slideInLeft animate__delay-300ms">
             <div class="row justify-content-center">
@@ -133,6 +132,9 @@
 <section class="container-fluid seccion4 py-5">
     <div class="container text-center" id="exclusivos">
         <h1 class="text-center mb-4">Evidencia</h1>
+        <p class="lead text-white">
+            Aquí puedes encontrar fotos de evidencia de como quedaría tu rostro con el servicio de hidratación profunda
+        </p>
 
         <div class="row justify-content-center">
             <div class="col-md-6 pb-4" id="exclusivo">
