--- a/maquillaje.html
+++ b/maquillaje.html
@@ -89,9 +89,8 @@
         </nav>
     </header>
 
-    <body>
         <!-- descripcion -->
-        <section class="servicios container py-5 wow animate__animated animate__slideInLeft animate__delay-300ms">
+        <section class="servicios container py-5 ">
             <div class="row justify-content-center">
               <div class="maquillaje col-md-10 text-center">
                 <h2 class="mb-4">Estilos de Maquillaje</h2>
