--- a/productos.html
+++ b/productos.html
@@ -89,9 +89,8 @@
         </nav>
     </header>
 
-    <body>
-        <!-- CUADROS DE LISTA -->
-        <section class="servicios container py-5 wow animate__animated animate__slideInLeft animate__delay-300ms">
+        <!-- CUADROS DE LISTA #11.4-->
+        <section class="servicios container py-5">
             <h1 class="text-center mb-4">Nuestros Productos</h1>
 
             <div class="row justify-content-center">
